--- a/api/.env
+++ b/api/.env
@@ -1,1 +1,3 @@
-
+PORT=8080
+JWT_SECRET=tasksapi
+MONGO_URL='mongodb+srv://aya:<ayha1911>@cluster0.qbyd1pp.mongodb.net/?retryWrites=true&w=majority'
